// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoginForm disables submit button when submitting form 1`] = `
<div
  id="signin-form-div"
>
  <h4
    className="text-center"
  >
    Sign In to Your Account
  </h4>
  <hr />
  <Form
    className="mt-4 mb-3 px-5"
    id="signin-form"
    onSubmit={[Function]}
    tag="form"
  >
    <FormGroup
      tag="div"
    >
      <Label
        className="col-form-label"
        for="login-email"
        tag="label"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        Email Address
      </Label>
      <RenderInput
        handleBlur={[Function]}
        handleChange={[Function]}
        handleFocus={[Function]}
        id="login-email"
        meta={
          Object {
            "asyncValidating": false,
            "error": null,
            "touched": false,
          }
        }
        name="email"
        placeholder="janesmith@me.com"
        type="email"
        value=""
      />
    </FormGroup>
    <FormGroup
      tag="div"
    >
      <Label
        className="col-form-label"
        for="login-password"
        tag="label"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        Password
      </Label>
      <RenderInput
        className="mb-4"
        handleBlur={[Function]}
        handleChange={[Function]}
        handleFocus={[Function]}
        id="login-password"
        meta={
          Object {
            "error": null,
            "touched": false,
          }
        }
        name="password"
        placeholder="••••••••••"
        type="password"
        value=""
      />
    </FormGroup>
    <Button
      className="btn-block mt-0"
      color="secondary"
      disabled={true}
      tag="button"
    >
      SIGN IN
    </Button>
  </Form>
  <p
    className="text-center"
  >
    Dont have an account, 
    <Link
      replace={false}
      target="_self"
      to="\\\\signup"
    >
      Sign up here
    </Link>
    .
  </p>
</div>
`;

exports[`LoginForm renders correctly 1`] = `
<div
  id="signin-form-div"
>
  <h4
    className="text-center"
  >
    Sign In to Your Account
  </h4>
  <hr />
  <Form
    className="mt-4 mb-3 px-5"
    id="signin-form"
    onSubmit={[Function]}
    tag="form"
  >
    <FormGroup
      tag="div"
    >
      <Label
        className="col-form-label"
        for="login-email"
        tag="label"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        Email Address
      </Label>
      <RenderInput
        handleBlur={[Function]}
        handleChange={[Function]}
        handleFocus={[Function]}
        id="login-email"
        meta={
          Object {
            "asyncValidating": false,
            "error": null,
            "touched": false,
          }
        }
        name="email"
        placeholder="janesmith@me.com"
        type="email"
        value=""
      />
    </FormGroup>
    <FormGroup
      tag="div"
    >
      <Label
        className="col-form-label"
        for="login-password"
        tag="label"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        Password
      </Label>
      <RenderInput
        className="mb-4"
        handleBlur={[Function]}
        handleChange={[Function]}
        handleFocus={[Function]}
        id="login-password"
        meta={
          Object {
            "error": null,
            "touched": false,
          }
        }
        name="password"
        placeholder="••••••••••"
        type="password"
        value=""
      />
    </FormGroup>
    <Button
      className="btn-block mt-0"
      color="secondary"
      disabled={true}
      tag="button"
    >
      SIGN IN
    </Button>
  </Form>
  <p
    className="text-center"
  >
    Dont have an account, 
    <Link
      replace={false}
      target="_self"
      to="\\\\signup"
    >
      Sign up here
    </Link>
    .
  </p>
</div>
`;

exports[`LoginForm shows error alert and disables submit button when there's a submit error 1`] = `
<div
  id="signin-form-div"
>
  <h4
    className="text-center"
  >
    Sign In to Your Account
  </h4>
  <hr />
  <Form
    className="mt-4 mb-3 px-5"
    id="signin-form"
    onSubmit={[Function]}
    tag="form"
  >
    <NormalAlert
      color="danger"
    >
      <p
        className="text-center mb-0"
      >
        Username/Password do not match
      </p>
    </NormalAlert>
    <FormGroup
      tag="div"
    >
      <Label
        className="col-form-label"
        for="login-email"
        tag="label"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        Email Address
      </Label>
      <RenderInput
        handleBlur={[Function]}
        handleChange={[Function]}
        handleFocus={[Function]}
        id="login-email"
        meta={
          Object {
            "asyncValidating": false,
            "error": null,
            "touched": false,
          }
        }
        name="email"
        placeholder="janesmith@me.com"
        type="email"
        value=""
      />
    </FormGroup>
    <FormGroup
      tag="div"
    >
      <Label
        className="col-form-label"
        for="login-password"
        tag="label"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        Password
      </Label>
      <RenderInput
        className="mb-4"
        handleBlur={[Function]}
        handleChange={[Function]}
        handleFocus={[Function]}
        id="login-password"
        meta={
          Object {
            "error": null,
            "touched": false,
          }
        }
        name="password"
        placeholder="••••••••••"
        type="password"
        value=""
      />
    </FormGroup>
    <Button
      className="btn-block mt-0"
      color="secondary"
      disabled={true}
      tag="button"
    >
      SIGN IN
    </Button>
  </Form>
  <p
    className="text-center"
  >
    Dont have an account, 
    <Link
      replace={false}
      target="_self"
      to="\\\\signup"
    >
      Sign up here
    </Link>
    .
  </p>
</div>
`;
